css/main_iolab.css
/* --------------------------------------- GENERAL STYLES --------------------------------------- */

body {
    background:#eee;
    color:#222;
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    size:14px;
}


header {
    background:#222;
    color:#fff;
    padding:10px;
    position:relative;
}

a {
    color:#1FA1FA;
}


label {
	display:inline-block;
	width:100px;
}

h1 {
	padding-left:20px;
}

/*------------------------------------- LAYOUT -------------------------------------------------*/
#wrapper {
    width:1000px;
    margin:0 auto;
    background:#fff;
    overflow:auto;
}

#main {
	padding:20px;
	overflow:hidden;
}

#bookmarks {
	padding:10px;
	max-width:350px;
	min-height:250px;
	list-style-type:none;
}

#bookmarks li {
	margin-bottom:10px;
}

#bookmarks li div a{
	max-width: 300px;
}


#bookmarks .tags {
	display:inline-block;
	max-width:90px;
	margin-left:10px;
	text-align:right;+.
	0
	vertical-align: top;
}

.section{
	width:440px;
	background:#eee;
	float:left;
	padding-left:20px;
	padding-bottom: 20px;
	margin:10px;
	-webkit-box-shadow: 1px 1px 1px #ccc;
	-moz-box-shadow: 1px 1px 1px #ccc;
	-ms-box-shadow: 1px 1px 1px #ccc;
	-o-box-shadow: 1px 1px 1px #ccc;
	-webkit-box-shadow: 1px 1px 1px #ccc;
}

#sourceUser{
	margin-bottom: 80px;
}

#sourceBookmarks{
	height:1028px;
}

#frame{
	width:415px;
	height:960px;
}

#tagSelector{
	display: none;
}

#viewer{
	width: 96%;
	height: 500px;
	background:#eee;
	float:left;
	padding-left:20px;
	padding-bottom: 20px;
	margin:10px;
	-webkit-box-shadow: 1px 1px 1px #ccc;
	-moz-box-shadow: 1px 1px 1px #ccc;
	-ms-box-shadow: 1px 1px 1px #ccc;
	-o-box-shadow: 1px 1px 1px #ccc;
	-webkit-box-shadow: 1px 1px 1px #ccc;
}

#frameViewer{
	width: 96%;
	height: 90%;
}

